add basic security login functionality

--- a/blog_api/config/packages/security.yaml
+++ b/blog_api/config/packages/security.yaml
@@ -22,6 +22,11 @@ security:
             lazy: true
             provider: app_user_provider
 
+            json_login:
+                check_path: app_login
+                username_path: email
+                password_path: password
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
