--- a/blog_api/.env
+++ b/blog_api/.env
@@ -27,7 +27,7 @@ APP_SECRET=2b80087d3a4d596f2a81c53eae6ac6c0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:super@127.0.0.1:3306/blog_2021?serverVersion=mariadb-10.5.10"
+DATABASE_URL="mysql://root:super@127.0.0.1:3306/blog_2021"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
