--- a/blog_api/config/services.yaml
+++ b/blog_api/config/services.yaml
@@ -8,6 +8,8 @@ parameters:
 services:
     # default configuration for services in *this* file
     _defaults:
+        # to make using tests, bin files and another simpler
+        public: true
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
@@ -23,3 +25,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+when@test:
+    services:
+        test.user_password_hasher:
+            alias: 'security.user_password_hasher'
+            public: true
